--- a/AndroidTrivia-Starter/app/src/main/res/layout/activity_main.xml
+++ b/AndroidTrivia-Starter/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,14 @@
                  Use @+id/titleFragment for the android:id
                  Use com.example.android.navigation.TitleFragment for the android:name
                  Use match_parent for the layout_height and layout_width -->
+            <!-- The NavHostFragment within the activity_main layout -->
+            <fragment
+                android:id="@+id/myNavHostFragment"
+                android:name="androidx.navigation.fragment.NavHostFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:navGraph="@navigation/navigation"
+                app:defaultNavHost="true" />
             <fragment
                 android:id="@+id/titleFragment"
                 android:name="com.example.android.navigation.TitleFragment"
